// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepTwoForm should render StepTwoForm for Dutch Auction Crowdsale 1`] = `
<form
  className="st-StepContent_FormFullHeight"
  id="tokenData"
  onSubmit={[Function]}
>
  <div
    className="sw-BorderedBlock sw-BorderedBlock-2Rows2Columns"
  >
    <div
      className="sw-InputField "
    >
      <div
        className="sw-FormControlTitle"
      >
        <label
          className="sw-FormControlTitle_Label"
        >
          Name
        </label>
        <div
          className="sw-FormControlTitle_Info"
          tabIndex="-1"
        >
          <span
            className="sw-FormControlTitle_Tooltip"
          >
            The name of your token. Will be used by Etherscan and other tokenbrowsers. Be afraid of trademarks.
          </span>
        </div>
      </div>
      <input
        className="sw-TextField"
        disabled={undefined}
        id="name"
        max={undefined}
        min={undefined}
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyPress={undefined}
        onPaste={undefined}
        placeholder={undefined}
        style={undefined}
        type="text"
        value="This is a valid name"
      />
    </div>
    <div
      className="sw-InputField "
    >
      <div
        className="sw-FormControlTitle"
      >
        <label
          className="sw-FormControlTitle_Label"
        >
          Ticker
        </label>
        <div
          className="sw-FormControlTitle_Info"
          tabIndex="-1"
        >
          <span
            className="sw-FormControlTitle_Tooltip"
          >
            The five letter ticker for your token. There are 11,881,376 combinations for 26 english letters. Be hurry.
          </span>
        </div>
      </div>
      <input
        className="sw-TextField"
        disabled={undefined}
        id="ticker"
        max={undefined}
        min={undefined}
        name="ticker"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyPress={undefined}
        onPaste={undefined}
        placeholder={undefined}
        style={undefined}
        type="text"
        value="TTK"
      />
    </div>
    <div
      className="sw-InputField "
    >
      <div
        className="sw-FormControlTitle"
      >
        <label
          className="sw-FormControlTitle_Label"
        >
          Decimals
        </label>
        <div
          className="sw-FormControlTitle_Info"
          tabIndex="-1"
        >
          <span
            className="sw-FormControlTitle_Tooltip"
          >
            Refers to how divisible a token can be, from 0 (not at all divisible) to 18 (pretty much continuous).
          </span>
        </div>
      </div>
      <input
        className="sw-TextField"
        disabled={false}
        id="decimals"
        max="18"
        min="0"
        name="decimals"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyPress={undefined}
        onPaste={undefined}
        placeholder={undefined}
        style={undefined}
        type="number"
        value="14"
      />
    </div>
    <div
      className="sw-InputField "
    >
      <div
        className="sw-FormControlTitle"
      >
        <label
          className="sw-FormControlTitle_Label"
        >
          Supply
        </label>
        <div
          className="sw-FormControlTitle_Info"
          tabIndex="-1"
        >
          <span
            className="sw-FormControlTitle_Tooltip"
          >
            The total supply of the token
          </span>
        </div>
      </div>
      <input
        className="sw-TextField"
        disabled={undefined}
        id="supply"
        max={undefined}
        min={undefined}
        name="supply"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyPress={undefined}
        onPaste={undefined}
        placeholder={undefined}
        style={undefined}
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="st-StepContent_Buttons"
  >
    <button
      className="sw-ButtonBack"
      onClick={[Function]}
      type="button"
    >
      Back
    </button>
    <button
      className="sw-ButtonContinue"
      disabled={true}
      onClick={undefined}
      type="submit"
    >
      <span
        className="sw-ButtonContinue_Text"
      >
        Continue
      </span>
    </button>
  </div>
</form>
`;

exports[`StepTwoForm should render StepTwoForm for Minted Capped Crowdsale 1`] = `
<form
  className="st-StepContent_FormFullHeight"
  id="tokenData"
  onSubmit={[Function]}
>
  <div
    className="sw-BorderedBlock sw-BorderedBlock-3Columns"
  >
    <div
      className="sw-InputField "
    >
      <div
        className="sw-FormControlTitle"
      >
        <label
          className="sw-FormControlTitle_Label"
        >
          Name
        </label>
        <div
          className="sw-FormControlTitle_Info"
          tabIndex="-1"
        >
          <span
            className="sw-FormControlTitle_Tooltip"
          >
            The name of your token. Will be used by Etherscan and other tokenbrowsers. Be afraid of trademarks.
          </span>
        </div>
      </div>
      <input
        className="sw-TextField"
        disabled={undefined}
        id="name"
        max={undefined}
        min={undefined}
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyPress={undefined}
        onPaste={undefined}
        placeholder={undefined}
        style={undefined}
        type="text"
        value="This is a valid name"
      />
    </div>
    <div
      className="sw-InputField "
    >
      <div
        className="sw-FormControlTitle"
      >
        <label
          className="sw-FormControlTitle_Label"
        >
          Ticker
        </label>
        <div
          className="sw-FormControlTitle_Info"
          tabIndex="-1"
        >
          <span
            className="sw-FormControlTitle_Tooltip"
          >
            The five letter ticker for your token. There are 11,881,376 combinations for 26 english letters. Be hurry.
          </span>
        </div>
      </div>
      <input
        className="sw-TextField"
        disabled={undefined}
        id="ticker"
        max={undefined}
        min={undefined}
        name="ticker"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyPress={undefined}
        onPaste={undefined}
        placeholder={undefined}
        style={undefined}
        type="text"
        value="TTK"
      />
    </div>
    <div
      className="sw-InputField "
    >
      <div
        className="sw-FormControlTitle"
      >
        <label
          className="sw-FormControlTitle_Label"
        >
          Decimals
        </label>
        <div
          className="sw-FormControlTitle_Info"
          tabIndex="-1"
        >
          <span
            className="sw-FormControlTitle_Tooltip"
          >
            Refers to how divisible a token can be, from 0 (not at all divisible) to 18 (pretty much continuous).
          </span>
        </div>
      </div>
      <input
        className="sw-TextField"
        disabled={false}
        id="decimals"
        max="18"
        min="0"
        name="decimals"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyPress={undefined}
        onPaste={undefined}
        placeholder={undefined}
        style={undefined}
        type="number"
        value="14"
      />
    </div>
  </div>
  <div>
    <h2
      className="sw-BorderedBlockTitle"
    >
      Reserved tokens
    </h2>
    <div
      className="sw-BorderedBlock sw-BorderedBlock-3Rows3Columns"
    >
      <div
        className="sw-InputField sw-BorderedBlock_Row1Column1"
      >
        <div
          className="sw-FormControlTitle"
        >
          <label
            className="sw-FormControlTitle_Label"
          >
            Address
          </label>
          <div
            className="sw-FormControlTitle_Info"
            tabIndex="-1"
          >
            <span
              className="sw-FormControlTitle_Tooltip"
            >
              Address where to send reserved tokens.
            </span>
          </div>
        </div>
        <input
          className="sw-TextField"
          disabled={undefined}
          id={undefined}
          max={undefined}
          min={undefined}
          name={undefined}
          onBlur={undefined}
          onChange={[Function]}
          onFocus={undefined}
          onKeyPress={undefined}
          onPaste={undefined}
          placeholder="Enter here"
          style={undefined}
          type="text"
          value=""
        />
        
      </div>
      <div
        className="sw-RadioInputField sw-BorderedBlock_Row1Column2"
      >
        <div
          className="sw-FormControlTitle"
        >
          <label
            className="sw-FormControlTitle_Label"
          >
            Dimension
          </label>
          <div
            className="sw-FormControlTitle_Info"
            tabIndex="-1"
          >
            <span
              className="sw-FormControlTitle_Tooltip"
            >
              Fixed amount or % of crowdsaled tokens. Will be deposited to the account after finalization of the crowdsale.
            </span>
          </div>
        </div>
        <div
          className="sw-RadioInputField_ButtonsContainer"
        >
          <label
            className="sw-RadioInputField_Label"
          >
            <input
              checked={true}
              className="sw-RadioInputField_Input"
              id="tokens"
              onChange={[Function]}
              type="radio"
              value="tokens"
            />
            <span
              className="sw-RadioInputField_Button"
            >
              Tokens
            </span>
          </label>
          <label
            className="sw-RadioInputField_Label"
          >
            <input
              checked={false}
              className="sw-RadioInputField_Input"
              id="percentage"
              onChange={[Function]}
              type="radio"
              value="percentage"
            />
            <span
              className="sw-RadioInputField_Button"
            >
              Percentage
            </span>
          </label>
        </div>
      </div>
      <div
        className="sw-NumericInput sw-BorderedBlock_Row1Column3"
      >
        <div
          className="sw-FormControlTitle"
        >
          <label
            className="sw-FormControlTitle_Label"
          >
            Value
          </label>
          <div
            className="sw-FormControlTitle_Info"
            tabIndex="-1"
          >
            <span
              className="sw-FormControlTitle_Tooltip"
            >
              Value in tokens. Don't forget to click + button for each reserved token.
            </span>
          </div>
        </div>
        <div
          className="sw-NumericInput_InputAndButtonContainer"
        >
          <input
            className="sw-TextField"
            disabled={undefined}
            id={undefined}
            max={undefined}
            min="1"
            name={undefined}
            onBlur={undefined}
            onChange={[Function]}
            onFocus={undefined}
            onKeyPress={[Function]}
            onPaste={[Function]}
            placeholder="Enter here"
            style={undefined}
            type="number"
            value=""
          />
          <div
            className="sw-NumericInput_ButtonPlus"
            onClick={[Function]}
          />
        </div>
        
      </div>
      <div
        className="sw-ReservedTokensTable sw-BorderedBlock_Row2Column1"
      >
        <div
          className="sw-ReservedTokensTable_Inner"
        >
          <table
            cellPadding="0"
            cellSpacing="0"
            className="sw-ReservedTokensTable_Table"
          >
            <tbody />
          </table>
        </div>
      </div>
      <div
        className="sw-ReservedTokensListControls sw-BorderedBlock_Row3Column1"
      >
        <span>
          Dropzone
        </span>
      </div>
    </div>
  </div>
  <div
    className="st-StepContent_Buttons"
  >
    <button
      className="sw-ButtonBack"
      onClick={[Function]}
      type="button"
    >
      Back
    </button>
    <button
      className="sw-ButtonContinue"
      disabled={false}
      onClick={undefined}
      type="submit"
    >
      <span
        className="sw-ButtonContinue_Text"
      >
        Continue
      </span>
    </button>
  </div>
</form>
`;
